src/test/ui/by-move-pattern-binding.stderr
error[E0507]: cannot move out of a shared reference
  --> $DIR/by-move-pattern-binding.rs:14:11
   |
LL |     match &s.x {
   |           ^^^^
LL |         &E::Foo => {}
LL |         &E::Bar(identifier) => f(identifier.clone())
   |         -------------------
   |         |       |
   |         |       data moved here
   |         |       move occurs because `identifier` has type `std::string::String`, which does not implement the `Copy` trait
   |         help: consider removing the `&`: `E::Bar(identifier)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
